fix: added text left align

--- a/src/shared/components/challenge-detail/Specification/SideBar/styles.scss
+++ b/src/shared/components/challenge-detail/Specification/SideBar/styles.scss
@@ -123,7 +123,7 @@
       font-style: italic;
     }
 
-    text-align: right;
+    text-align: left;
   }
 
   ol {
